--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,9 @@
 <br/>
-<section id="footer">
-<div class="container-footer">
+<section id="footer" style="position: relative;left: 0;
+bottom: 0;
+width: 100%;
+text-align: center;">
+<div class="container-footer" >
   <div class="panel-footer">
 	  <div class="row">
 		<div class="col-sm-4">
